--- a/payton_supplementt_p1_2.Tests/payton_supplementt_p1_2.Tests.csproj
+++ b/payton_supplementt_p1_2.Tests/payton_supplementt_p1_2.Tests.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\payton_supplementt_p1_2\payton_supplementt_p1_2.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
